--- a/app/static/css/pages/profile/profile-base.css
+++ b/app/static/css/pages/profile/profile-base.css
@@ -65,7 +65,7 @@
 	overflow: hidden;
 }
 
-.section-title {
+.profile-section .section-title {
 	font-size: 14px;
 	font-weight: 700;
 	color: #772432;
